<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_app_name"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="20sp"
                android:text="@string/textView_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editText_name"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_selection"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="60sp"
                android:layout_marginRight="10sp"
                android:text="@string/textView_selection"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_plant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButton_plant" />

                <RadioButton
                    android:id="@+id/radioButton_animal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButton_animal" />

                <RadioButton
                    android:id="@+id/radioButton_figure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButton_figure" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="130sp"
                android:text="@string/textView_birth_date"
                android:textSize="16sp" />

            <CalendarView
                android:id="@+id/calendarView_birth_date"
                android:layout_width="280sp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="10sp">

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/button_save" />

            <Button
                android:id="@+id/button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:text="@string/button_view" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>